Adding fvt tests folder and shell script to execute fvt test cases
Signed-off-by: Suresh Babu Angadi <sureshab@in.ibm.com>

--- a/configure.ac
+++ b/configure.ac
@@ -88,6 +88,7 @@ AC_CONFIG_FILES([
     contrib/Makefile
     contrib/gingers390x.spec.zkvm
     tests/Makefile
+    tests/fvt/Makefile
 ])
 
 AC_OUTPUT
