added fvt test cases for /storagedevices api
Signed-off-by: Suresh Babu Angadi <sureshab@in.ibm.com>

--- a/tests/fvt/config
+++ b/tests/fvt/config
@@ -3,4 +3,10 @@ devices : ["device_list"]
 
 [Network I/O Devices]
 configured_device :
-unconfigured_device : 
+unconfigured_device :
+
+[Storage I/O Devices]
+online_dasdeckd_device :
+offline_dasdeckd_device :
+online_zfcp_device :
+offline_zfcp_device : 
