--- a/tests/fvt/config
+++ b/tests/fvt/config
@@ -2,10 +2,13 @@
 devices : ["device_list"]
 
 [Network I/O Devices]
-# enter network device triple
+# enter network device triplet
 # example 0.0.1500,0.0.1501,1502 as report from "znetconf  -u" command
+# for osa port device - use first bus id of device triplet which has both
+# port 0 and port 1 available
 configured_device :
 unconfigured_device :
+unconfigure_device_osaport :
 
 [Storage I/O Devices]
 online_dasdeckd_device :
